crates/macros/tests/ui/fail/on_function.rs
#[fittings::service]
fn not_a_trait() {}

fn main() {}
